Example test using PowerMocks on a static class

--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,63 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.6.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.5.5</version>
-            <scope>test</scope>
-        </dependency>
+        <!-- JUnit dependencies -->
+            <dependency>
+                <!-- JUnit 5 (AKA Jupiter) -->
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>5.6.2</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <!-- Not mandatory but forces Intellij to use a specific version of JUnit launcher -->
+                <groupId>org.junit.platform</groupId>
+                <artifactId>junit-platform-launcher</artifactId>
+                <version>1.6.2</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <!-- Allows tests to be ran in JUnit 4 environment (needed by maven-surefire-plugin) -->
+                <groupId>org.junit.vintage</groupId>
+                <artifactId>junit-vintage-engine</artifactId>
+                <version>5.6.2</version>
+                <scope>test</scope>
+            </dependency>
+        <!-- JUnit dependencies -->
+
+        <!-- PowerMock dependencies -->
+            <dependency>
+                <!-- Needs JUnit 4 module as it's not compatible with JUnit 5 -->
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-module-junit4</artifactId>
+                <version>2.0.7</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <!-- PowerMock = Mockito 2 + helpful extras -->
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-api-mockito2</artifactId>
+                <version>2.0.7</version>
+                <scope>test</scope>
+            </dependency>
+        <!-- /PowerMock dependencies -->
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.vintage</groupId>
+                        <artifactId>junit-vintage-engine</artifactId>
+                        <version>5.4.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
