--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>co.olivercaine</groupId>
-    <artifactId>javatesting</artifactId>
+    <artifactId>java-testing</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
